--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,14 @@
 fastapi==0.115.0
 uvicorn==0.30.6
-sqlalchemy==2.0.30
-psycopg2-binary==2.9.9
+sqlalchemy==2.0.39
+# psycopg2-binary==2.9.9
+psycopg2[binary]==2.9.9
 pydantic==2.8.2
 holidays==0.56
+python-jose==3.3.0
+passlib==1.7.4
+python-multipart==0.0.9
+bcrypt==4.1.2
+
+# For production deployment with PostgreSQL, uncomment:
+# psycopg2-binary==2.9.9
