--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,9 +67,8 @@ jobs:
             __init__.py:F401" > .flake8.ci
 
         flake8 --config=.flake8.ci .
-        # Skip black and isort checks for now
-        # black --check .
-        # isort --check .
+        black --check .
+        isort --check .
 
   build-frontend:
     runs-on: ubuntu-latest
@@ -90,11 +89,8 @@ jobs:
     - name: Lint JavaScript/Svelte code
       run: |
         cd frontend/web
-        # Skip ESLint for now
-        # npx eslint .
-        # Skip Prettier checks for now
-        # npx prettier --config .prettierrc --check .
-        echo "Skipping frontend linting checks"
+        npx eslint . --no-error-on-unmatched-pattern
+        npx prettier --config .prettierrc --check .
 
     - name: Build frontend
       run: |
