--- a/frontend/web/package.json
+++ b/frontend/web/package.json
@@ -6,7 +6,10 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "sync": "svelte-kit sync"
+    "sync": "svelte-kit sync",
+    "format": "prettier --write .",
+    "lint": "eslint . --no-error-on-unmatched-pattern",
+    "lint:fix": "eslint . --fix --no-error-on-unmatched-pattern"
   },
   "dependencies": {
     "svelte": "^4.2.19"
