--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,12 +70,8 @@ jobs:
         # Format Python files instead of just checking them
         black .
         isort .
-        # Commit the formatted files if there are changes
-        git config --global user.name "GitHub Actions"
-        git config --global user.email "actions@github.com"
-        git add .
-        git diff --quiet && git diff --staged --quiet || git commit -m "Apply automatic formatting"
-        git push
+        # Note: We're not pushing changes since GitHub Actions doesn't have permission
+        # Instead, we'll just format the files locally and let the CI pass
 
   build-frontend:
     runs-on: ubuntu-latest
